<com.zalopay.ui.widget.KeyboardFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical"
            android:paddingBottom="@dimen/button.margin.bottom">

            <TextView
                android:id="@+id/txtError"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:background="@color/background_snackbar"
                android:gravity="center"
                android:text="@string/min_money"
                android:textColor="@color/txt_title_check_internet"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing.medium.t"
                android:paddingTop="16dp">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/imgAvatar"
                    style="@style/AvatarDraweeView"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/tvDisplayName"
                    style="@style/TextView.Item.Main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing.medium.t"
                    tools:text="ThanhPTN" />

                <TextView
                    android:id="@+id/tvZaloPayName"
                    style="@style/TextView.Item.Sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0987654321" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_dynamic_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/separate"
                    android:background="@color/separate" />

                <vn.com.vng.zalopay.ui.widget.MoneyEditText
                    android:id="@+id/edtAmount"
                    style="@style/ZaloPayEditText.Money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_amount"
                    android:maxLength="@integer/max_length_edittext_money"
                    app:zlp_paddingLeftLine="16dp" />

                <com.zalopay.ui.widget.edittext.ZPEditText
                    android:id="@+id/edtTransferMsg"
                    style="@style/ZaloPayEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_message"
                    android:inputType="text|textCapSentences"
                    android:maxLength="@integer/max_length_message" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_fixed_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing.small.t"
                android:visibility="gone">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/separate"
                    android:layout_marginLeft="@dimen/spacing.medium"
                    android:layout_marginRight="@dimen/spacing.medium"
                    android:background="@color/separate" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="@dimen/spacing.medium.s"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@color/txt_item_main"
                        android:textSize="@dimen/textsize.large.l"
                        tools:text="100.000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="@dimen/spacing.tiny"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/sdk_currency_unit"
                        android:textColor="@color/txt_item_main"
                        android:textSize="@dimen/textsize.tiny" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtTransferMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/spacing.medium"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="@dimen/spacing.medium.s"
                    android:gravity="center"
                    android:maxLines="2"
                    android:textColor="@color/txt_item_main"
                    tools:text="@string/transfer_money_note" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/separate"
                    android:background="@color/separate" />
            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                style="@style/Button.Default.New"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button.height"
                android:enabled="false"
                android:text="@string/btn_continue" />
        </LinearLayout>
    </ScrollView>
</com.zalopay.ui.widget.KeyboardFrameLayout>
