...
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/confirm_button"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/view_top_linearlayout"
...
                android:id="@+id/orderinfo_module"
                layout="@layout/module_order_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/channel_list_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scrollbars="none" />
        </LinearLayout>

...
